--- a/webapp/front/front/src/app/features/admin/admin-amenity-create-page/admin-amenity-create-page.component.html
+++ b/webapp/front/front/src/app/features/admin/admin-amenity-create-page/admin-amenity-create-page.component.html
@@ -1,82 +1,123 @@
 <div class="cool-static-container shifts-reservation">
-    <h2 class="card-title">Create New Amenity</h2>
-    <div class="divider"></div>
-    <div>
-        <form [formGroup]="amenityForm" (ngSubmit)="onSubmit()" novalidate>
-            <!-- Amenity Name -->
-            <div class="d-flex flex-column justify-content-between align-items-center mb-2 mt-2">
-                <div class="form-row">
-                    <input formControlName="name" class="cool-input" placeholder="Name" type="text" />
-                    <div class="form-row form-error" *ngIf="nameControl?.invalid && nameControl?.touched">
-                        <p class="error">Name is required</p>
-                    </div>
-                </div>
-            </div>
+  <h2 class="card-title">Create New Amenity</h2>
+  <div class="divider"></div>
+  <div>
+    <form [formGroup]="amenityForm" (ngSubmit)="onSubmit()" novalidate>
+      <!-- Amenity Name -->
+      <div
+        class="d-flex flex-column justify-content-between align-items-center mb-2 mt-2"
+      >
+        <div class="form-row">
+          <input
+            formControlName="name"
+            class="cool-input"
+            placeholder="Name"
+            type="text"
+          />
+          <div
+            class="form-row form-error"
+            *ngIf="nameControl?.invalid && nameControl?.touched"
+          >
+            <p class="error">Name is required</p>
+          </div>
+        </div>
+      </div>
 
-            <!-- Amenity Description -->
-            <div class="d-flex flex-column justify-content-between align-items-center">
-                <textarea formControlName="description" class="cool-input textarea-min-max" rows="5"
-                    placeholder="Description"></textarea>
-                <div class="form-row form-error" *ngIf="descControl?.invalid && descControl?.touched">
-                    <p class="error">Description is required</p>
-                </div>
-            </div>
+      <!-- Amenity Description -->
+      <div
+        class="d-flex flex-column justify-content-between align-items-center"
+      >
+        <textarea
+          formControlName="description"
+          class="cool-input textarea-min-max"
+          rows="5"
+          placeholder="Description"
+        ></textarea>
+        <div
+          class="form-row form-error"
+          *ngIf="descControl?.invalid && descControl?.touched"
+        >
+          <p class="error">Description is required</p>
+        </div>
+      </div>
 
-            <p class="m-t-40">Amenity Hours</p>
-            <div class="divider"></div>
+      <p class="m-t-40">Amenity Hours</p>
+      <div class="divider"></div>
 
-            <!-- Action buttons -->
-            <div class="f-r-sb-c w-100 pl-3 pr-3">
-                <a (click)="check9to5()" class="w-100 cool-button cool-small on-bg">9-17</a>
-                <a (click)="uncheckWeekends()" class="w-100 cool-button red">Clear weekend</a>
-                <a (click)="clearAllCheckedHours()" class="w-100 cool-button red">Clear all</a>
-            </div>
+      <!-- Action buttons -->
+      <div class="f-r-sb-c w-100 pl-3 pr-3">
+        <a (click)="check9to5()" class="w-100 cool-button cool-small on-bg"
+          >9-17</a
+        >
+        <a (click)="uncheckWeekends()" class="w-100 cool-button red"
+          >Clear weekend</a
+        >
+        <a (click)="clearAllCheckedHours()" class="w-100 cool-button red"
+          >Clear all</a
+        >
+      </div>
 
-            <!-- Time Table (Dynamic) -->
-            <div class="cool-table w-100 p-4">
-                <table>
-                    <tr>
-                        <th *ngFor="let day of uniqueDays">
-                            {{ getAbbreviatedDay(day) }}
-                        </th>
-                    </tr>
+      <!-- Time Table (Dynamic) -->
+      <div class="cool-table w-100 p-4">
+        <table>
+          <tr>
+            <th *ngFor="let day of uniqueDays">
+              {{ getAbbreviatedDay(day) }}
+            </th>
+          </tr>
 
-                    <!-- For each time as a row -->
-                    <tr *ngFor="let time of uniqueTimes; let rowIndex = index">
-                        <td>
-                            <label class="container">
-                                <!-- Toggle entire row (time) -->
-                                <input type="checkbox" [checked]="isRowSelected(time)" (click)="toggleRow(time)" />
-                            </label>
-                        </td>
+          <!-- For each time as a row -->
+          <tr *ngFor="let time of uniqueTimes; let rowIndex = index">
+            <td>
+              <label class="container">
+                <!-- Toggle entire row (time) -->
+                <input
+                  type="checkbox"
+                  [checked]="isRowSelected(time)"
+                  (click)="toggleRow(time)"
+                />
+              </label>
+            </td>
 
-                        <!-- For each day, show a cell you can toggle -->
-                        <td *ngFor="let day of uniqueDays" [class.selected]="isShiftSelectedByDayTime(day, time)">
-                            <div class="cell-wrapper" (click)="toggleCellSelection(day, time)">
-                                {{ formatTime(time)}}
-                            </div>
-                        </td>
+            <!-- For each day, show a cell you can toggle -->
+            <td
+              *ngFor="let day of uniqueDays"
+              [class.selected]="isShiftSelectedByDayTime(day, time)"
+            >
+              <div
+                class="cell-wrapper"
+                (click)="toggleCellSelection(day, time)"
+              >
+                {{ formatTime(time) }}
+              </div>
+            </td>
+          </tr>
+        </table>
+      </div>
 
-                    </tr>
-                </table>
-            </div>
+      <!-- Info text -->
+      <div class="f-c-c-c">
+        <div class="f-r-c-c" style="gap: 5px">
+          Remember that
+          <span class="c-primary font-weight-bolder">
+            only selected shifts
+          </span>
+          will be active for your amenity.
+        </div>
+      </div>
 
-            <!-- Info text -->
-            <div class="f-c-c-c">
-                <div class="f-r-c-c" style="gap: 5px">
-                    Remember that
-                    <span class="c-primary font-weight-bolder"> only selected shifts </span>
-                    will be active for your amenity.
-                </div>
-            </div>
-
-            <!-- Submit button -->
-            <div class="d-flex justify-content-end m-t-40">
-                <button id="submit-checks" type="submit" class="cool-button cool-small on-bg w-25" style="height: 40px;"
-                    [disabled]="!anyShiftChecked">
-                    Create
-                </button>
-            </div>
-        </form>
-    </div>
+      <!-- Submit button -->
+      <div class="d-flex justify-content-end m-t-40">
+        <button
+          id="submit-checks"
+          type="submit"
+          class="cool-button cool-small on-bg w-25"
+          style="height: 40px"
+          [disabled]="!anyShiftChecked"
+        >
+          Create
+        </button>
+      </div>
+    </form>
+  </div>
 </div>
