--- a/webapp/front/front/src/assets/styles/commons.css
+++ b/webapp/front/front/src/assets/styles/commons.css
@@ -17,7 +17,7 @@ select,
 textarea,
 button,
 span {
-  font: 14px/1 'IBM Plex Sans', sans-serif;
+  font: 14px/1 "IBM Plex Sans", sans-serif;
   /* font-weight: bold; */
 }
 
@@ -42,9 +42,7 @@ body {
   /*        radial-gradient(50% 50%,var(--_g)) calc(var(--s)/2) calc(var(--s)/2)*/
   /*        var(--c1);*/
   /*background-size: var(--s) var(--s);*/
-
 }
-
 
 :root {
   --text: #4f5248;
@@ -61,7 +59,7 @@ body {
   --secondary: #d8d8c5;
   --accent: #6696e2;
   --error: #de6f6f;
-  --scrollbarthumb: #004F2D;
+  --scrollbarthumb: #004f2d;
   --bordercolor: #dadad0;
   --admin-color: #578a66;
   --always-background: #faf6e8;
@@ -108,7 +106,6 @@ body {
   --star-active: #ff9c1a;
   --lila: #7d7ae3;
   --to-lila: rgb(72, 78, 89);
-
 }
 
 html {
@@ -143,7 +140,6 @@ html {
   scrollbar-color: var(--primary) transparent;
 }
 
-
 a {
   color: inherit;
   /* Inherit the color from the parent element */
@@ -169,8 +165,6 @@ i {
   color: inherit;
 }
 
-
-
 h2 {
   font-size: 24px;
   font-weight: bold;
@@ -178,6 +172,7 @@ h2 {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  line-height: 1.2em;
 }
 
 h3 {
@@ -197,7 +192,6 @@ form {
   margin-bottom: 0;
 }
 
-
 select,
 input[type="text"],
 input[type="password"],
@@ -212,7 +206,6 @@ input[type="select"] {
   width: 100%;
   height: var(--input-height);
 }
-
 
 input[type="checkbox"] {
   position: relative;
@@ -233,14 +226,14 @@ input[type="checkbox"] {
     height: 110%;
     bottom: -2px;
     left: 0;
-    -webkit-transition: bottom .3s cubic-bezier(.5, 2.5, .7, .7);
-    -o-transition: bottom .3s cubic-bezier(.5, 2.5, .7, .7);
-    transition: bottom .3s cubic-bezier(.5, 2.5, .7, .7);
+    -webkit-transition: bottom 0.3s cubic-bezier(0.5, 2.5, 0.7, 0.7);
+    -o-transition: bottom 0.3s cubic-bezier(0.5, 2.5, 0.7, 0.7);
+    transition: bottom 0.3s cubic-bezier(0.5, 2.5, 0.7, 0.7);
   }
 
   &::before {
     position: absolute;
-    content: '';
+    content: "";
     display: block;
     top: 0;
     left: 5px;
@@ -262,7 +255,7 @@ input[type="checkbox"] {
       opacity: 1;
     }
 
-    ~label::before {
+    ~ label::before {
       clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
     }
   }
@@ -285,9 +278,7 @@ select {
   background-size: 1em;
   background-position-x: 98%;
   background-position-y: 50%;
-
 }
-
 
 label {
   margin-bottom: 0;
@@ -302,7 +293,6 @@ button:focus-within button:focus {
 p {
   margin-bottom: 0;
 }
-
 
 .f-c-c-c {
   display: flex;
@@ -436,7 +426,6 @@ p {
   gap: 1rem;
 }
 
-
 .skeleton {
   --color-base: var(--text);
   --color-highlight: var(--lighttext);
@@ -447,13 +436,18 @@ p {
   background: var(--color-base);
 
   &::after {
-    content: '';
+    content: "";
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(90deg, var(--color-base), var(--color-highlight), var(--color-base));
+    background: linear-gradient(
+      90deg,
+      var(--color-base),
+      var(--color-highlight),
+      var(--color-base)
+    );
     animation: progress 1s ease-in-out infinite;
   }
 }
@@ -491,7 +485,6 @@ p {
 .font-size-22 {
   font-size: 22px !important;
 }
-
 
 .font-size-24 {
   font-size: 24px !important;
@@ -532,6 +525,5 @@ p {
 .g-05 {
   gap: 0.5em;
 }
-
 
 /* ...................... */
